--- a/css/style.css
+++ b/css/style.css
@@ -97,31 +97,34 @@ main {
 .header-menu-link {
     padding-top: 24px;
     padding-bottom: 24px;
-    color: #404bbf;
+    color: #2E2F42;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    
-    position: relative;
+      
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 20px;
-
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-menu-link::after {
-    content: "";
+.current {
+    position: relative;
+    color: #404BBF;
+}
+.header-menu-link.current::after {
+    content: '';
     position: absolute;
     left: 0;
     bottom: -1px;
     height: 4px;
     background-color: #404BBF;
     border-radius: 2px;
-   /* width: 48px;*/
+    width: 100%;
+    display: block;
 }
 
 .header-menu-link:hover,
