--- a/css/style.css
+++ b/css/style.css
@@ -638,9 +638,9 @@ color: #f4f4fd;
 }
 
 .modal-btn {
-    background-color: transparent;
-    border: none;
-    border-radius: 4px;
+    background-color: #E7E9FC;
+    border: 1px;
+    border-radius: 50%;
     position: absolute;
     top: 24px;
     right: 24px;
@@ -650,9 +650,18 @@ color: #f4f4fd;
     display: flex;
     justify-content: center;
     align-items: center;
+    color: #2E2F42;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-btn-icon {}
+.modal-btn:hover, .modal-btn:focus, .modal-btn:active {
+    background-color: #404BBF;
+    color: #FFF;
+}
+
+.modal-btn-icon {
+    fill: currentColor;
+}
 
 .modal-title {
     color: #2E2F42;
@@ -667,13 +676,95 @@ color: #f4f4fd;
 
 .modal-form {}
 
+.modal-field {
+margin-bottom: 8px;
+}
+
+.modal-label {
+    display: block;
+    color: #8E8F99;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    margin-bottom: 4px;
+}
+
+.input-wrap {
+    position: relative;
+}
+
 .modal-input {
     width: 100%;
     height: 40px;
+    padding-left: 38px;
+    padding-right: 16px;
     border-radius: 4px;
     border: 1px solid rgba(46, 47, 66, 0.40);
     background-color: transparent;
-    margin-bottom: 8px;
+    color: teal;
+    font-size: 12px;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-wrap:focus-within .modal-input {
+    border: 1px solid #4D5AE5;
+}
+
+.input-icon {
+    position: absolute;
+    top: 8px;
+    left: 16px;
+    fill: #2E2F42;
+    transform: translateY(-50%, -50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-wrap:focus-within .input-icon {
+    fill: #4D5AE5;
+}
+
+.modal-textarea {
+    background-color: transparent;
+    width: 100%;
+    height: 120px;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.40);
+    padding: 8px 16px;
+    color: teal;
+    font-size: 12px;
+    outline: transparent;
+    resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-field:focus-within .modal-textarea {
+    border-color: #4D5AE5;
+}
+
+.modal-textarea::placeholder {
+    color: rgba(46, 47, 66, 0.40);
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+}
+
+.check-text {
+    color: #8E8F99;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+}
+
+.check-text-policy {
+    color: #4D5AE5;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
 }
 
 .modal-form-btn {
@@ -695,6 +786,10 @@ color: #f4f4fd;
     letter-spacing: 0.04em;
     
     cursor: pointer;
+}
+
+.modal-label {
+
 }
 
 
