--- a/css/style.css
+++ b/css/style.css
@@ -547,12 +547,12 @@ transform: translateY(0);
 }
 
 .footer-container-soc {
-display: flex;
-   
+    display: flex;
     padding: 0;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+    margin-right: 80px;
 }
 
 .footer-soc-text {
@@ -613,6 +613,79 @@ color: #f4f4fd;
     fill: green;
 }*/
 
+.footer-container-form {
+display: flex;
+padding: 0;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.form-text {
+color: #FFF;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+}
+
+.footer-form {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.footer-form-input {
+    min-width: 264px;
+    height: 40px;
+    padding: 8px 16px;
+    border-radius: 4px;
+    border: 1px solid var(--WHITE, #FFF);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    background-color: transparent;
+    color: #ffffff;
+    font-size: 12px;
+    margin-right: 24px;
+}
+
+.footer-form-input::placeholder {
+    color: #FFF;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 2.0;
+    letter-spacing: 0.04em;
+}
+
+.footer-form-btn {
+display: block;
+min-width: 165px;
+height: 40px;
+border-radius: 4px;
+    background-color: #4D5AE5;
+    border: none;
+    padding: 8px 24px;
+
+    color: #FFF;
+        font-family: inherit;
+        text-align: center;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 16px;
+}
+
+.footer-form-icon {
+fill: #ffffff;
+}
+    
+        
+
 /*===================================*/
 
 /*=======MODAL==========*/
@@ -622,6 +695,16 @@ color: #f4f4fd;
     width: 100%;
     height: 100%;
     background-color: rgba(46, 47, 66, 0.40);
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacit 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
 }
 
 .modal {
@@ -708,8 +791,12 @@ margin-bottom: 8px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+/*.modal-input:focus {
+    border-color: #4D5AE5;
+}*/
+
 .input-wrap:focus-within .modal-input {
-    border: 1px solid #4D5AE5;
+    border-color: #4D5AE5;
 }
 
 .input-icon {
@@ -721,9 +808,17 @@ margin-bottom: 8px;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+/*.modal-input:focus + .input-icon {
+fill: #4D5AE5;
+}*/
+
 .input-wrap:focus-within .input-icon {
     fill: #4D5AE5;
 }
+
+/*.modal-field-textarea {
+    margin-bottom: 12px;
+}*/
 
 .modal-textarea {
     background-color: transparent;
@@ -751,12 +846,20 @@ margin-bottom: 8px;
     letter-spacing: 0.04em;
 }
 
+.modal-field-checkbox {
+    padding-top: 8px;
+    padding-bottom: 24px;
+}
+
 .check-text {
     color: #8E8F99;
     font-size: 12px;
     font-weight: 400;
     line-height: 1.17;
     letter-spacing: 0.04em;
+    display: flex;
+    align-items: center;
+    
 }
 
 .check-text-policy {
@@ -765,6 +868,29 @@ margin-bottom: 8px;
     font-weight: 400;
     line-height: 1.17;
     letter-spacing: 0.04em;
+}
+
+.check-text-box {
+    display: block;
+    width: 16px;
+    height: 16px;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.40);
+    margin-right: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    fill: transparent;
+}
+
+.modal-check:checked + .check-text > .check-text-box {
+    background-color: #404BBF;
+    fill: #FFF;
+    border: none;
+}
+
+.check-text-icon {
+
 }
 
 .modal-form-btn {
@@ -776,7 +902,6 @@ margin-bottom: 8px;
     padding: 16px 32px;
     margin: 0 auto;
     min-width: 169px;
-    
     color: #FFF;
     font-family: inherit;
     text-align: center;
