--- a/css/style.css
+++ b/css/style.css
@@ -692,6 +692,7 @@ fill: #ffffff;
 .backdrop {
     position: fixed;
     top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(46, 47, 66, 0.40);
