--- a/css/style.css
+++ b/css/style.css
@@ -869,6 +869,7 @@ fill: #4D5AE5;
     font-weight: 400;
     line-height: 1.17;
     letter-spacing: 0.04em;
+    padding-left: 4px;
 }
 
 .check-text-box {
