--- a/css/style.css
+++ b/css/style.css
@@ -844,7 +844,7 @@ fill: #4D5AE5;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-field:focus-within .modal-textarea {
+.modal-field-textarea:focus-within .modal-textarea {
     border-color: #4D5AE5;
 }
 
@@ -881,7 +881,6 @@ fill: #4D5AE5;
 }
 
 .check-text-box {
-    display: inline-flex;
     width: 16px;
     height: 16px;
     border-radius: 2px;
@@ -891,19 +890,21 @@ fill: #4D5AE5;
     justify-content: center;
     align-items: center;
     fill: transparent;
-    color: #F4F4FD;
+    /*color: #F4F4FD;*/
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
 }
 
 .modal-check:checked + .check-text > .check-text-box {
     background-color: #404BBF;
-    color: #FFF;
+    fill: #F4F4FD;;
+    /*color: #FFF;*/
     border: none;
 }
 
-.check-text-icon {
+/*.check-text-icon {
     fill: currentColor;
-}
+}*/
 
 .modal-form-btn {
     border: none;
